--- a/package.json
+++ b/package.json
@@ -11,20 +11,24 @@
   "dependencies": {
     "core-js": "^3.1.2",
     "vue": "^2.6.10",
+    "vue-cli-plugin-pug": "^1.0.7",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-plugin-unit-jest": "^4.0.0",
+    "@vue/cli-plugin-vuex": "^4.0.4",
     "@vue/cli-service": "^4.0.0",
     "@vue/eslint-config-airbnb": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "fontello-sass": "^0.1.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
+    "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
