--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/vue-fontawesome": "^0.1.7",
     "core-js": "^3.1.2",
+    "font-awesome": "^4.7.0",
     "vue": "^2.6.10",
     "vue-cli-plugin-pug": "^1.0.7",
     "vue-router": "^3.1.3",
@@ -26,7 +30,6 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "fontello-sass": "^0.1.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
