--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "vue": "^2.6.10",
     "vue-cli-plugin-pug": "^1.0.7",
     "vue-router": "^3.1.3",
+    "vue-sweetalert2": "^2.1.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
-    "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-plugin-unit-jest": "^4.0.0",
     "@vue/cli-plugin-vuex": "^4.0.4",
     "@vue/cli-service": "^4.0.0",
